apps/60-services/docspell/overlays/prod/patch-disable-consumedir.yaml
---
# consumedir disabled: ghcr.io/docspell/dsc image is no longer publicly
# accessible (403). Re-enable once a working image is found.
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: docspell-restserver
spec:
  template:
    spec:
      containers:
        - name: consumedir
          $patch: delete
