apps/60-services/docspell/overlays/prod/patch-joex-startup.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: docspell-joex
spec:
  template:
    spec:
      containers:
        - name: joex
          startupProbe:
            httpGet:
              path: /api/info/version
              port: api
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 30
          livenessProbe:
            httpGet:
              path: /api/info/version
              port: api
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
