apps/60-services/docspell/overlays/prod/patch-resources.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: docspell-joex
spec:
  template:
    metadata:
      labels:
        vixens.io/sizing.joex: G-medium
    spec:
      priorityClassName: vixens-medium
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: docspell-restserver
spec:
  template:
    metadata:
      labels:
        vixens.io/sizing.restserver: small
    spec:
      priorityClassName: vixens-medium
