apps/60-services/docspell/overlays/prod/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: docspell-restserver
  labels:
    app: docspell
    component: restserver
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
    traefik.ingress.kubernetes.io/router.middlewares: traefik-redirect-https@kubernetescrd
    vixens.io/nossoneeded: "true"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Services
    gethomepage.dev/name: Docspell
    gethomepage.dev/icon: docspell.svg
    gethomepage.dev/description: Document management system
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - docspell.truxonline.com
      secretName: docspell-prod-tls
  rules:
    - host: docspell.truxonline.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keda-interceptor-proxy
                port:
                  number: 8080
